instrucciones accordion y ajuste scroll tablero

--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -109,6 +109,9 @@
         Categorización de notas
       </h1>
     </div>
+    <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
+      <app-categorizacion-notas-accordion></app-categorizacion-notas-accordion>
+    </div>
     <!-- Tablero -->
     <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
     <div
