--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -31,7 +31,7 @@
                 </div>
                 </ng-container>
               </div>-->
-              
+
               <div class="symbol-group symbol-hover mb-3">
                 <ng-container *ngFor="let usu2 of usuarios_active; let i2 = index;">
                 <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu2.nombre}}">
@@ -117,8 +117,13 @@
       Entrevista al experto
     </h1>
   </div>
+  <!-- Instrucciones -->
+  <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
+    <app-entender-accordion></app-entender-accordion>
+  </div>
+
   <!-- Tablero -->
-  <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
+  <div class="container" style="min-width: 100%; height: 520px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
     <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
       <a class="add material-icons" (click)="addNote()" >
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;" viewBox="0 0 16 16">
