--- a/src/app/_metronic/layout2/notes/notes.component.css
+++ b/src/app/_metronic/layout2/notes/notes.component.css
@@ -1,7 +1,7 @@
 .note {
     background-color: rgb(255, 240, 70);
     position: relative;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5); 
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 1em;
     border-radius: 10px 10px 0px 0px;
 }
@@ -25,6 +25,7 @@
     height: 150px;
     border-radius: 8px;
     overflow-y: auto;
+    margin: 0 0 45px 0;
 }
 
 .footer{
