--- a/src/app/pages/boards-voto/boards-voto.component.html
+++ b/src/app/pages/boards-voto/boards-voto.component.html
@@ -106,6 +106,9 @@
         Votación
       </h1>
     </div>
+    <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
+      <app-voto-accordion></app-voto-accordion>
+    </div>
     <!-- Tablero -->
     <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
     <div
