--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,28 @@
 //@import "./assets/sass/style.dark";
 
 @import "./assets/sass/style.angular.scss";
+
+
+// Accordion styles start
+.accordion-button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 1rem 1rem !important;
+  font-size: 1rem;
+  color: white !important;
+  text-align: left;
+  background-color: #232323 !important;
+  border: 0;
+  border-radius: 0;
+  overflow-anchor: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+}
+
+.accordion-body {
+  padding: 1rem 1rem !important;
+  background-color: #232323 !important;
+  color: white !important;
+}
+// Accordion styles end
