--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -205,7 +205,7 @@
     </div>
     <div class="container" style="align-items: flex-end;">
       <a (click)="saveCategoryAll()" class="btn btn-success" style="margin: -15px 10px 0px 10px;
-      float: right;">Siguiente Etapa</a>
+      float: right;" *ngIf="rol == 'Decisor'">Siguiente Etapa</a>
       <a routerLink="/dashboard" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
       float: right;">Salir de MbipiLab</a>
     </div>
