--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -168,7 +168,7 @@
       <div class="container" style="align-items: flex-end;">
         <a (click)="saveNoteAll()" class="btn btn-success" style="margin: -15px 10px 0px 10px;
         float: right;" *ngIf="rol == 'Decisor'">Siguiente Etapa</a>
-        <a routerLink="/dashboard" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
+        <a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
         float: right;">Salir de MbipiLab</a>
       </div>
 
