--- a/src/app/pages/boards-voto/boards-voto.component.html
+++ b/src/app/pages/boards-voto/boards-voto.component.html
@@ -138,14 +138,15 @@
                       (cdkDropListDropped)="drop($event)">
                       <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
                         <label class="votos">{{item.voto}}</label>
-                        <mat-icon
+                        <div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)"></div>
+                        <!--<mat-icon
                                                 class="voto-maximo"
-                                                [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>
-                        <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j)">Quitar</button>
-                        <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i)">Votar</button>
+                                                [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>-->
+                        <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor'">Quitar</button>
+                        <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i) && rol != 'Decisor'">Votar</button>
 
-                        <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i)">Voto +</button>
-                        <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j)">Quitar</button>
+                        <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Voto +</button>
+                        <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>
                       </div>
                     </div>
                   </div>
@@ -190,9 +191,9 @@
       </ng-template>
     </div>
     <div class="container" style="align-items: flex-end;">
-      <a routerLink="/proyect-init/fase3" class="btn btn-success" style="margin: -15px 10px 0px 10px;
-      float: right;">Siguiente Etapa</a>
-      <a routerLink="/dashboard" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
+      <a (click)="saveVotoAll()" class="btn btn-success" style="margin: -15px 10px 0px 10px;
+      float: right;" *ngIf="rol == 'Decisor'">Siguiente Etapa</a>
+      <a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
       float: right;">Salir de MbipiLab</a>
     </div>
 
