--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -123,7 +123,7 @@
   </div>
 
   <!-- Tablero -->
-  <div class="container" style="min-width: 100%; height: 520px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
+  <div class="container" style="min-width: 100%; height: 520px;overflow: auto;background-color: #232323; position: relative;padding: 20px 20px 40px 20px; margin: 0;">
     <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
       <a class="add material-icons" (click)="addNote()" >
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;" viewBox="0 0 16 16">
