ajuste tableros y orden estilos de componentes

--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -120,7 +120,7 @@
       <app-categorizacion-notas-accordion></app-categorizacion-notas-accordion>
     </div>
     <!-- Tablero -->
-    <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
+    <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px 20px 40px 20px; margin: 0;">
     <div
     class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto"
     cdkScrollable #tableroRef>
