--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -108,25 +108,26 @@
     <!--end::Curve bottom-->
   </div>
   <!--end::Header Section-->
-  <!-- Titulo -->
+  <!-- Timer -->
   <div class="container" style="width: 100%; padding: 0;">
     <app-timer></app-timer>
   </div>
-  <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
-    <h1 style="width: 1320px;text-align: start;color: white;">
+  <!-- Titulo -->
+  <div class="container title-container">
+    <h1>
       Entrevista al experto
     </h1>
   </div>
   <!-- Instrucciones -->
-  <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
+  <div class="container instructions-container">
     <app-entender-accordion></app-entender-accordion>
   </div>
 
   <!-- Tablero -->
-  <div class="container" style="min-width: 100%; height: 520px;overflow: auto;background-color: #232323; position: relative;padding: 20px 20px 40px 20px; margin: 0;">
-    <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
+  <div class="container tablero-container">
+    <div class="toolbar" id="toolbar" tabindex="0">
       <a class="add material-icons" (click)="addNote()" >
-        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
       </a>
@@ -137,60 +138,58 @@
   </div>
   <!-- Video -->
     <!-- Fondo Opaco   -->
-  <div [ngClass]="showVideoFlag ? videoOn : videoOff" class="fondo-video" style="background-color: black; height: 1125px; width: 100%;position: absolute; margin: -1125px 0 0 0;opacity: 0.9;">
+  <div class="fondo-video" [ngClass]="showVideoFlag ? videoOn : videoOff">
   </div>
-  <div style="text-align: center; position: absolute; width: 100%;margin: -860px 0px 0px 0;">
-    <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto" style="border-radius: 10px;-webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-    -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-    box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);"></video>
+  <!-- Video Container -->
+  <div class="video-container">
+    <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto"></video>
   </div>
-  	<!--begin::Highlight-->
-    <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
-
-      <!--begin::Link-->
-      <!-- PlayPause Bttn -->
-      <div class="container" style="text-align: center;">
-        <ng-container *ngIf="!playing; else elseBlock">
-          <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px; margin-left: 10px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
-            </svg>
-          </a>
-        </ng-container>
-        <ng-template #elseBlock>
-          <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px;margin-left: 10px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.25 5C5.56 5 5 5.56 5 6.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C7.5 5.56 6.94 5 6.25 5zm3.5 0c-.69 0-1.25.56-1.25 1.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C11 5.56 10.44 5 9.75 5z"/>
-            </svg>
-          </a>
-        </ng-template>
-      </div>
-      <div class="container" style="align-items: flex-end;">
-        <a (click)="saveNoteAll()" class="btn btn-success" style="margin: -15px 10px 0px 10px;
-        float: right;" *ngIf="rol == 'Decisor'">Siguiente Etapa</a>
-        <a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
-        float: right;">Salir de MbipiLab</a>
-      </div>
-
-
-
-      <!-- <a (click)="onPause()" class="btn btn-lg btn-outline-white flex-shrink-0 my-2" style="text-align: center;margin: auto;background: transparent !important;">
-        <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16">
-        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.25 5C5.56 5 5 5.56 5 6.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C7.5 5.56 6.94 5 6.25 5zm3.5 0c-.69 0-1.25.56-1.25 1.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C11 5.56 10.44 5 9.75 5z"/>
-        </svg>
-      </a> -->
-      <!-- <button (click)="displayVideo()" type="button" class="btn btn-primary">
-        Muestra Video
-      </button>
-      <button (click)="hideVideo()" type="button" class="btn btn-secondary">
-        Esconde Video
-      </button> -->
-      <!-- <button (click)=" videoCurrentTime()" type="button" class="btn btn-success">
-        Current Time
-      </button> -->
-      <!--end::Link-->
+  	<!--begin::Bottom Toolbar-->
+  <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
+    <!--begin::Link-->
+    <!-- PlayPause Bttn -->
+    <div class="container" style="text-align: center;">
+      <ng-container *ngIf="!playing; else elseBlock">
+        <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
+          <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px; margin-left: 10px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+          </svg>
+        </a>
+      </ng-container>
+      <ng-template #elseBlock>
+        <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
+          <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px;margin-left: 10px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.25 5C5.56 5 5 5.56 5 6.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C7.5 5.56 6.94 5 6.25 5zm3.5 0c-.69 0-1.25.56-1.25 1.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C11 5.56 10.44 5 9.75 5z"/>
+          </svg>
+        </a>
+      </ng-template>
     </div>
-    <!--end::Highlight-->
+    <div class="container" style="align-items: flex-end;">
+      <a (click)="saveNoteAll()" class="btn btn-success" style="margin: -15px 10px 0px 10px;
+      float: right;" *ngIf="rol == 'Decisor'">Siguiente Etapa</a>
+      <a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
+      float: right;">Salir de MbipiLab</a>
+    </div>
+
+
+
+    <!-- <a (click)="onPause()" class="btn btn-lg btn-outline-white flex-shrink-0 my-2" style="text-align: center;margin: auto;background: transparent !important;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.25 5C5.56 5 5 5.56 5 6.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C7.5 5.56 6.94 5 6.25 5zm3.5 0c-.69 0-1.25.56-1.25 1.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C11 5.56 10.44 5 9.75 5z"/>
+      </svg>
+    </a> -->
+    <!-- <button (click)="displayVideo()" type="button" class="btn btn-primary">
+      Muestra Video
+    </button>
+    <button (click)="hideVideo()" type="button" class="btn btn-secondary">
+      Esconde Video
+    </button> -->
+    <!-- <button (click)=" videoCurrentTime()" type="button" class="btn btn-success">
+      Current Time
+    </button> -->
+    <!--end::Link-->
+  </div>
+    <!--end::Bottom Toolbar-->
   <!--begin::Scrolltop-->
   <div id="kt_scrolltop" class="scrolltop" data-kt-scrolltop="true">
     <!--begin::Svg Icon | path: icons/duotune/arrows/arr066.svg-->
