--- a/src/app/pages/boards-voto/boards-voto.component.html
+++ b/src/app/pages/boards-voto/boards-voto.component.html
@@ -38,7 +38,7 @@
                   </div>
                   </ng-container>
                 </div>
-                
+
                 <!--end::Mobile menu toggle-->
                 <!--begin::Logo image-->
                 <!-- <a href="../../demo1/dist/landing.html">
@@ -109,59 +109,50 @@
   </div>
     <!--end::Header Section-->
     <!-- Titulo -->
-    <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
-      <h1 style="width: 1320px;text-align: start;color: white;">
+    <div class="container title-container">
+      <h1>
         Votación
       </h1>
     </div>
-    <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
+    <!-- Instrucciones -->
+    <div class="container instructions-container">
       <app-voto-accordion></app-voto-accordion>
     </div>
     <!-- Tablero -->
-    <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
-    <div
-    class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto"
-    cdkScrollable #tableroRef>
-
-    <!-- Main -->
-    <div class="flex flex-auto p-6 sm:p-10">
-
-      <div cdkDropListGroup>
-                <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
-                <div class="clasificacion-container">
-                    <h2 style="color: #fff;">{{t.title}}</h2>
-
-                    <div
-                      cdkDropList
-                      [cdkDropListData]="t.data"
-                      class="clasificacion-list"
-                      (cdkDropListDropped)="drop($event)">
-                      <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
-                        <label class="votos">{{item.voto}}</label>
-                        <div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)"></div>
-                        <!--<mat-icon
-                                                class="voto-maximo"
-                                                [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>-->
-                        <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor'">Quitar</button>
-                        <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i) && rol != 'Decisor'">Votar</button>
-
-                        <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Voto +</button>
-                        <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>
-                      </div>
+    <div class="container tablero-container">
+      <div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable #tableroRef>
+      <!-- Main -->
+        <div class="flex flex-auto p-6 sm:p-10">
+          <div cdkDropListGroup>
+            <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
+              <div class="clasificacion-container">
+                <h2 style="color: #fff;">{{t.title}}</h2>
+                <div class="clasificacion-list" cdkDropList [cdkDropListData]="t.data" (cdkDropListDropped)="drop($event)">
+                  <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
+                    <label class="votos">{{item.voto}}</label>
+                    <div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)">
                     </div>
+                    <!--<mat-icon
+                    class="voto-maximo"
+                    [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>-->
+                    <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor'">Quitar</button>
+                    <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i) && rol != 'Decisor'">Votar</button>
+                    <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Voto +</button>
+                    <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>
                   </div>
-                </ng-container>
+                </div>
               </div>
-</div>
-
-</div>
-<ng-container *ngFor="let eq of equipo; let i = index;">
-<img id="puntero-{{eq}}" src="assets/images/puntero.png" style="position: absolute;width: 30px;height: 30px;display: none;"/>
-<label id="equipo-{{eq}}" style="position: absolute;width: 100px;height: 100px;display: none;">{{eq}}</label>
-</ng-container>
-<canvas id="canvasId" #canvasRef width="100" height="100"></canvas>
-</div>
-<!-- Video -->
+            </ng-container>
+          </div>
+        </div>
+      </div>
+      <ng-container *ngFor="let eq of equipo; let i = index;">
+        <img id="puntero-{{eq}}" src="assets/images/puntero.png" style="position: absolute;width: 30px;height: 30px;display: none;"/>
+        <label id="equipo-{{eq}}" style="position: absolute;width: 100px;height: 100px;display: none;">{{eq}}</label>
+      </ng-container>
+      <canvas id="canvasId" #canvasRef width="100" height="100"></canvas>
+    </div>
+    <!-- Video -->
     <!-- Fondo Opaco   -->
     <div [ngClass]="showVideoFlag ? videoOn : videoOff" class="fondo-video" style="background-color: black; height: 1125px; width: 100%;position: absolute; margin: -1125px 0 0 0;opacity: 0.9;">
     </div>
