--- a/src/app/pages/boards-voto/boards-voto.component.scss
+++ b/src/app/pages/boards-voto/boards-voto.component.scss
@@ -1,28 +1,59 @@
+.title-container{
+  width: 100%;
+  text-align: start;
+  padding: 0;
+  margin-bottom: 20px;
 
-  :host {
+  h1{
+    width: 1320px;
+    text-align: start;
+    color: white;
+  }
+}
+
+.instructions-container{
+  width: 100%;
+  text-align: start;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.tablero-container{
+  min-width: 100%;
+  height: 600px;
+  overflow: auto;
+  background-color: #232323;
+  position: relative;
+  padding: 20px;
+  margin: 0;
+}
+
+
+
+:host {
+  height: 100%;
+  margin: 0;
+
+  .flex-root {
     height: 100%;
-    margin: 0;
-  
-    .flex-root {
-      height: 100%;
-    }
   }
-  
-  .page-loaded {
-    app-layout {
-      opacity: 1;
-      transition: opacity 1s ease-in-out;
-    }
+}
+
+.page-loaded {
+  app-layout {
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
   }
-  
-  .videoOn{
-    display: inline;
-  }
-  
-  .videoOff{
-    display: none;
-  }
-  
+}
+
+.videoOn{
+  display: inline;
+}
+
+.videoOff{
+  display: none;
+}
+
   // #myVideo{
   //   display: none;
   // }
@@ -46,7 +77,7 @@
     display: inline-block;
     vertical-align: top;
   }
-  
+
   .clasificacion-list {
     border: solid 1px #ccc;
     min-height: 60px;
@@ -56,7 +87,7 @@
     display: block;
     padding: 50px;
   }
-  
+
   .clasificacion-box {
     padding: 20px 10px;
     border-bottom: solid 1px #ccc;
@@ -69,7 +100,7 @@
     cursor: move;
     background: rgb(255, 201, 4);
     font-size: 14px;
-    
+
     width:150px;
     height: 150px;
     cursor: pointer;
@@ -78,17 +109,17 @@
     margin: auto;
     margin-bottom: 20px;
   }
-  
+
   .clasificacion-box:nth-child(even) {
       transform: rotate(0deg);
       }
-  
+
   .clasificacion-box:nth-child(odd) {
-  
+
       transform: rotate(0deg);
-  
+
       }
-  
+
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
@@ -96,23 +127,23 @@
                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
-  
+
   .cdk-drag-placeholder {
     opacity: 0;
   }
-  
+
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
   .clasificacion-box:last-child {
     border: none;
   }
-  
+
   .clasificacion-list.cdk-drop-list-dragging .clasificacion-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
   .votos {
     position: absolute;
     top: 10px;
@@ -127,7 +158,7 @@
     border: 1px solid #000;
     border-radius: 50%;
   }
-  
+
   .voto-maximo {
     position: absolute;
     top: -10px;
@@ -137,7 +168,7 @@
     height: 32px !important;
     color: green;
   }
-  
+
   .votar {
     position: absolute;
     bottom: 10px;
@@ -149,12 +180,12 @@
     border: 1px solid rgb(5, 184, 255);
     border-radius: 10%;
   }
-  
+
   .votar:hover{
     background-color: rgb(7, 81, 255);
   }
-  
-  
+
+
   .votar-maximo {
     position: absolute;
     bottom: 10px;
@@ -166,11 +197,11 @@
     border: 1px solid rgb(0, 199, 73);
     border-radius: 10%;
   }
-  
+
   .votar-maximo:hover{
     background-color: rgb(5, 114, 13);
   }
-  
+
   .quitar {
     position: absolute;
     bottom: 10px;
@@ -182,11 +213,11 @@
     border: 1px solid rgb(253, 62, 78);
     border-radius: 10%;
   }
-  
+
   .quitar:hover{
     background-color: rgb(255, 7, 7);
   }
-  
+
   .quitar-maximo {
     position: absolute;
     bottom: 10px;
@@ -198,7 +229,7 @@
     border: 1px solid rgb(253, 62, 78);
     border-radius: 10%;
   }
-  
+
   .quitar-maximo:hover{
     background-color: rgb(255, 7, 7);
   }
