--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -1,27 +1,85 @@
+// VIDEO
+.fondo-video{
+  background-color: black;
+  height: 1125px;
+  width: 100%;
+  position: absolute;
+  margin: -1125px 0 0 0;
+  opacity: 0.9;
+}
+
+.video-container{
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  margin: -860px 0px 0px 0;
+
+  video{
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+    box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+  }
+
+}
+//VIDEO ENDS
+
+.title-container{
+  width: 100%;
+  text-align: start;
+  padding: 0;
+  margin-bottom: 20px;
+
+  h1{
+    width: 1320px;
+    text-align: start;
+    color: white;
+  }
+}
+
+.instructions-container{
+  width: 100%;
+  text-align: start;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.tablero-container{
+  min-width: 100%;
+  min-height: 600px;
+  overflow: auto;
+  background-color: #232323;
+  position: relative;
+  padding: 20px 20px 40px 20px;
+  margin: 0;
+}
+
+
+
 :host {
     height: 100%;
     margin: 0;
-  
+
     .flex-root {
       height: 100%;
     }
   }
-  
+
   .page-loaded {
     app-layout {
       opacity: 1;
       transition: opacity 1s ease-in-out;
     }
   }
-  
+
   .videoOn{
     display: inline;
   }
-  
+
   .videoOff{
     display: none;
   }
-  
+
   // #myVideo{
   //   display: none;
   // }
@@ -30,7 +88,7 @@
     float: left;
     margin-left: 10px;
   }
-  
+
   .toolbar {/*
     left: 0;
     bottom: 0;*/
@@ -49,7 +107,7 @@
     font-size: -webkit-xxx-large;*/
     font-weight: bold;
   }
-  
+
   .add-category{
     float: right;
     margin-left: auto;
@@ -71,7 +129,7 @@
   .dark-modal .close {
     color: white !important;
   }
-  
+
   /*Ajustes Layout*/
   .notes-container{
     width: 100%;
@@ -132,7 +190,7 @@
     display: grid;/*
     vertical-align: top;*/
   }
-  
+
   .example-list {
     border: solid 1px #ccc;
     min-height: 60px;
@@ -142,7 +200,7 @@
     display: block;
     padding: 10px;
   }
-  
+
   .example-box {
     padding: 20px 10px;
     border-bottom: solid 1px #ccc;
@@ -163,17 +221,17 @@
     margin: auto;
     margin-bottom: 20px;
   }
-  
+
   .example-box:nth-child(even) {
       transform: rotate(0deg);
       }
-  
+
   .example-box:nth-child(odd) {
-  
+
       transform: rotate(0deg);
-  
+
       }
-  
+
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
@@ -181,23 +239,23 @@
                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
-  
+
   .cdk-drag-placeholder {
     opacity: 0;
   }
-  
+
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
   .example-box:last-child {
     border: none;
   }
-  
+
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
   .votos {
     position: absolute;
     top: 10px;
@@ -212,7 +270,7 @@
     border: 1px solid #000;
     border-radius: 50%;
   }
-  
+
   .voto-maximo {
     position: absolute;
     top: -10px;
@@ -222,7 +280,7 @@
     height: 32px !important;
     color: green;
   }
-  
+
   .votar {
     position: absolute;
     bottom: 10px;
@@ -234,12 +292,12 @@
     border: 1px solid rgb(5, 184, 255);
     border-radius: 10%;
   }
-  
+
   .votar:hover{
     background-color: rgb(7, 81, 255);
   }
-  
-  
+
+
   .votar-maximo {
     position: absolute;
     bottom: 10px;
@@ -251,11 +309,11 @@
     border: 1px solid rgb(0, 199, 73);
     border-radius: 10%;
   }
-  
+
   .votar-maximo:hover{
     background-color: rgb(5, 114, 13);
   }
-  
+
   .quitar {
     position: absolute;
     bottom: 10px;
@@ -267,11 +325,11 @@
     border: 1px solid rgb(253, 62, 78);
     border-radius: 10%;
   }
-  
+
   .quitar:hover{
     background-color: rgb(255, 7, 7);
   }
-  
+
   .quitar-maximo {
     position: absolute;
     bottom: 10px;
@@ -283,7 +341,7 @@
     border: 1px solid rgb(253, 62, 78);
     border-radius: 10%;
   }
-  
+
   .quitar-maximo:hover{
     background-color: rgb(255, 7, 7);
   }
