ajuste tiempo base de datos

--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -110,7 +110,7 @@
   <!--end::Header Section-->
   <!-- Timer -->
   <div class="container" style="width: 100%; padding: 0;">
-    <app-timer></app-timer>
+    <app-timer [hr]="hr" [min]="min" [sec]="sec" [ms]="ms" [proyecto_id]="proyecto_id" [rol]="rol" *ngIf="showTimer"></app-timer>
   </div>
   <!-- Titulo -->
   <div class="container title-container">
