--- a/src/app/modules/auth/components/verify-code/verify-code.component.html
+++ b/src/app/modules/auth/components/verify-code/verify-code.component.html
@@ -24,14 +24,31 @@
   <!-- end::Alert info-->
 
   <!-- begin::Alert error-->
-  <ng-container *ngIf="hasError">
+  <ng-container *ngIf="errorState === errorStates.HasError">
     <div class="mb-lg-15 alert alert-danger">
       <div class="alert-text font-weight-bold">
-        Código de verificación incorrecto
+        Los sentimos, se ha presentado un error, intenta nuevamente.
       </div>
     </div>
   </ng-container>
   <!-- end::Alert error-->
+  <!-- begin::Alert error-->
+  <ng-container *ngIf="errorState === errorStates.TokenInvalid">
+    <div class="mb-lg-15 alert alert-danger">
+      <div class="alert-text font-weight-bold">
+        El tiempo para reactivación de password ha expirado, intenta nuevamente.
+      </div>
+    </div>
+  </ng-container>
+  <!-- end::Alert error-->
+
+  <ng-container *ngIf="errorState === errorStates.NoError">
+    <div class="mb-10 bg-light-info p-8 rounded">
+      <!--begin::Body-->
+      <div class="text-info">Código verificado correctamente! Serás redirigido para el cambio de tu password.</div>
+      <!--end::Body-->
+    </div>
+  </ng-container>
 
   <!--begin::Form group-->
   <div class="fv-row mb-10">
