--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -355,7 +355,7 @@
 																	<div class="fs-5 fw-bolder text-dark">$23,000</div>
 																	<div class="fs-7 text-muted">Sales</div>
 																</div>-->
-																<div class="text-end">
+																<div class="text-end" *ngIf="rol == 'Decisor'">
 																<button (click)="quitar(usu.id)"
 																	class="
 																	btn btn-icon btn-bg-light btn-active-color-primary btn-sm
