--- a/src/app/pages/config-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-wizzard/steps/step4/step4.component.html
@@ -184,5 +184,18 @@
         >Guardar tarjeta</span
       ></label
     >
+    <button
+    type="button"
+    class="btn btn-lg btn-light-primary me-3"
+    (click)="validar()"
+  >
+    Validar
+    </button>
+    <input
+        formControlName="successCard"
+        class="form-check-input"
+        type="hidden"
+        value=""
+      />
   </div>
 </div>
