ajustes encriptar config cuenta

--- a/src/app/pages/config-wizzard/config-cta-wizzard/config-cta-wizzard.html
+++ b/src/app/pages/config-wizzard/config-cta-wizzard/config-cta-wizzard.html
@@ -167,7 +167,7 @@
 
       <div class="d-flex flex-stack pt-10">
         <div class="mr-2">
-          <ng-container *ngIf="currentStep$.value !== 1">
+          <ng-container *ngIf="currentStep$.value !== 1 && currentStep$.value <= formsCount - 1">
             <button
               type="button"
               class="btn btn-lg btn-light-primary me-3"
