--- a/src/app/pages/config-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-wizzard/steps/step4/step4.component.html
@@ -184,7 +184,7 @@
         >Guardar tarjeta</span
       ></label
     >
-    <button
+    <!--<button
     type="button"
     class="btn btn-lg btn-light-primary me-3"
     (click)="validar()"
@@ -196,6 +196,6 @@
         class="form-check-input"
         type="hidden"
         value=""
-      />
+      />-->
   </div>
 </div>
