--- a/src/app/pages/metas-voto/metas-voto.component.html
+++ b/src/app/pages/metas-voto/metas-voto.component.html
@@ -1,6 +1,6 @@
 <!--begin::Root-->
 <!--<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;height: 100%;">-->
-  <div class="" style="background-color: #070d15 !important;overflow: auto;">
+  <div class="" style="background-color: #070d15 !important;overflow: hidden;">
     <!--begin::Header Section-->
     <div class="mb-0" id="home">
       <!--begin::Wrapper-->
@@ -14,16 +14,16 @@
               <!--begin::Logo-->
               <div class="d-flex align-items-center flex-equal">
                 <!--begin::Mobile menu toggle-->
-                <button class="btn btn-icon btn-active-color-primary me-3 d-flex d-lg-none" id="kt_landing_menu_toggle">
+                <!-- <button class="btn btn-icon btn-active-color-primary me-3 d-flex d-lg-none" id="kt_landing_menu_toggle"> -->
                   <!--begin::Svg Icon | path: icons/duotune/abstract/abs015.svg-->
-                  <span class="svg-icon svg-icon-2hx">
+                  <!-- <span class="svg-icon svg-icon-2hx">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                       <path d="M21 7H3C2.4 7 2 6.6 2 6V4C2 3.4 2.4 3 3 3H21C21.6 3 22 3.4 22 4V6C22 6.6 21.6 7 21 7Z" fill="currentColor" />
                       <path opacity="0.3" d="M21 14H3C2.4 14 2 13.6 2 13V11C2 10.4 2.4 10 3 10H21C21.6 10 22 10.4 22 11V13C22 13.6 21.6 14 21 14ZM22 20V18C22 17.4 21.6 17 21 17H3C2.4 17 2 17.4 2 18V20C2 20.6 2.4 21 3 21H21C21.6 21 22 20.6 22 20Z" fill="currentColor" />
                     </svg>
-                  </span>
+                  </span> -->
                   <!--end::Svg Icon-->
-                </button>
+                <!-- </button> -->
                 <!--<div class="symbol-group symbol-hover mb-3">
                   <ng-container *ngFor="let usu of usuarios; let i = index;">
                   <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.title}}">
@@ -38,7 +38,13 @@
                   </div>
                   </ng-container>
                 </div>
-
+                
+                <!-- Timer -->
+                <div class="container align-items-center mb-3">
+                  <div style="width: 300px;padding: 0;margin: auto;">
+                    <app-timer [hr]="hr" [min]="min" [sec]="sec" [ms]="ms" [proyecto_id]="proyecto_id" [rol]="rol" *ngIf="showTimer"></app-timer>
+                  </div>
+                </div>
                 <!--end::Mobile menu toggle-->
                 <!--begin::Logo image-->
                 <!-- <a href="../../demo1/dist/landing.html">
@@ -100,7 +106,7 @@
       </div>
       <!--end::Wrapper-->
       <!--begin::Curve bottom-->
-      <div class="landing-curve landing-dark-color mb-10 mb-lg-20">
+      <div class="landing-curve landing-dark-color mb-3 mb-lg-3">
         <svg viewBox="15 12 1470 48" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 11C3.93573 11.3356 7.85984 11.6689 11.7725 12H1488.16C1492.1 11.6689 1496.04 11.3356 1500 11V12H1488.16C913.668 60.3476 586.282 60.6117 11.7725 12H0V11Z" fill="currentColor"></path>
         </svg>
@@ -108,15 +114,16 @@
       <!--end::Curve bottom-->
   </div>
     <!--end::Header Section-->
+    <!-- Timer -->
     <!-- Titulo -->
     <div class="container title-container">
       <h1>
-        Votación
+        Votación Meta Largo Plazo
       </h1>
     </div>
     <!-- Instrucciones -->
     <div class="container instructions-container">
-      <app-voto-accordion></app-voto-accordion>
+      <app-metas-accordion></app-metas-accordion>
     </div>
     <!-- Tablero -->
     <div class="container tablero-container">
@@ -129,14 +136,17 @@
                 <h2 style="color: #fff;">{{t.title}}</h2>
                 <div class="clasificacion-list" cdkDropList [cdkDropListData]="t.data" (cdkDropListDropped)="drop($event)">
                   <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
-                    <label class="votos">{{item.voto}}</label>
+                    <label class="votos">{{item.votos}}</label>
                     <div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)">
                     </div>
                     <!--<mat-icon
                     class="voto-maximo"
                     [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>-->
                     <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor'">Quitar</button>
-                    <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i) && rol != 'Decisor'">Votar</button>
+                    <button class="votar" (click)="votar(i, j)" *ngIf="num_votos < maximo_votos && rol != 'Decisor'">Votar</button>
+                    <!--
+                      *ngIf="verifyVoto(i, j)"
+                      *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i)"-->
                     <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Voto +</button>
                     <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>
                   </div>
@@ -154,12 +164,10 @@
     </div>
     <!-- Video -->
     <!-- Fondo Opaco   -->
-    <div [ngClass]="showVideoFlag ? videoOn : videoOff" class="fondo-video" style="background-color: black; height: 1125px; width: 100%;position: absolute; margin: -1125px 0 0 0;opacity: 0.9;">
+    <div  class="fondo-video" [ngClass]="showVideoFlag ? videoOn : videoOff">
     </div>
-    <div style="text-align: center; position: absolute; width: 100%;margin: -860px 0px 0px 0;">
-      <video controls id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto" style="border-radius: 10px;-webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-      -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-      box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);"></video>
+    <div class="video-container">
+      <video controls id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto"></video>
     </div>
   <!--begin::Highlight-->
   <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
