--- a/src/app/pages/preguntas/preguntas.component.html
+++ b/src/app/pages/preguntas/preguntas.component.html
@@ -119,12 +119,12 @@
   <!-- Titulo -->
   <div class="container title-container">
     <h1>
-      Entrevista al experto
+      Preguntas del Sprint
     </h1>
   </div>
   <!-- Instrucciones -->
   <div class="container instructions-container">
-    <app-entender-accordion></app-entender-accordion>
+    <app-entender-preguntas-accordion></app-entender-preguntas-accordion>
   </div>
 
   <!-- Tablero -->
@@ -137,7 +137,7 @@
       </a>
     </div>
     <div class="app" *ngFor="let note of notes">
-      <app-note (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note>
+      <app-note-pregunta (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note-pregunta>
     </div>
   </div>
   <!-- Video -->
