ajustes estilos capitalize work break color x

--- a/src/app/pages/metas-voto/metas-voto.component.scss
+++ b/src/app/pages/metas-voto/metas-voto.component.scss
@@ -121,6 +121,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    word-break: break-all;
     box-sizing: border-box;
     cursor: move;
     background: rgb(255, 201, 4);
