--- a/src/app/pages/boards-voto/boards-voto.component.scss
+++ b/src/app/pages/boards-voto/boards-voto.component.scss
@@ -119,6 +119,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    word-break: break-all;
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
