--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -154,7 +154,7 @@
               <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
                 <div [ngClass]="i == 0 ? 'notes-container' : 'example-container'">
                   <div class="note_toolbar text-end" style="position: absolute; width: 300px;cursor: text;" *ngIf="i > 0">
-                    <span class="close material-icons" (click)="deleteCategory(t.data,i)" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <span class="close material-icons" (click)="deleteCategory(t.data,i)" style="cursor: pointer;color: #fff;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                       </svg></span>
                   </div>
