--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -152,6 +152,7 @@
   .notes-box {
     padding: 0px 10px;
     border-bottom: solid 1px #ccc;
+    word-break: break-all;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -207,6 +208,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    word-break: break-all;
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
