--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -1,6 +1,6 @@
 <!--begin::Root-->
 <!--<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;height: 100%;">-->
-<div class="" style="background-color: #070d15 !important;overflow: hidden;">
+<div class="" style="background-color: #070d15 !important;overflow: hidden;height: 100%;">
   <!--begin::Header Section-->
   <div class="mb-0" id="home">
     <!--begin::Wrapper-->
