--- a/src/app/pages/metas-voto/metas-voto.component.html
+++ b/src/app/pages/metas-voto/metas-voto.component.html
@@ -142,12 +142,12 @@
                     <!--<mat-icon
                     class="voto-maximo"
                     [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>-->
-                    <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor'">Quitar</button>
+                    <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor' && item.votos > 0">Quitar</button>
                     <button class="votar" (click)="votar(i, j)" *ngIf="num_votos < maximo_votos && rol != 'Decisor'">Votar</button>
                     <!--
                       *ngIf="verifyVoto(i, j)"
                       *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i)"-->
-                    <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Voto +</button>
+                    <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Seleccionar</button>
                     <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>
                   </div>
                 </div>
