ajustes mapa experiencia

--- a/src/app/pages/mapa/mapa.component.scss
+++ b/src/app/pages/mapa/mapa.component.scss
@@ -565,7 +565,7 @@ header a {
   align-items: center;
   position: absolute;
   background: white !important;
-  width: 200px;
+  /*width: 200px;*/
   min-height: 40px;
   border-radius: 4px;
   border: 2px solid black;
